# agent-saga

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_saga/: __init__.py  log.py  result.py  saga.py  step.py
src/agent_saga.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_saga.py
