[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-saga"
version = "1.0.0"
description = "Distributed saga pattern for multi-agent systems — automatic rollback without a global coordinator"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Darshankumar Joshi", email = "darshjme@gmail.com" }]
keywords = ["saga", "distributed", "agents", "transactions", "rollback", "compensating-actions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/darshjme-codes/agent-saga"
Repository = "https://github.com/darshjme-codes/agent-saga"
"Bug Tracker" = "https://github.com/darshjme-codes/agent-saga/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
